--- a/index.css
+++ b/index.css
@@ -1,22 +1,30 @@
 /*======= Font rengini #3C373B yapan bir yeni bir universal selector yaratın*/
-
-
-h1 {
-  font-family: 'Gaegu', cursive;
-  margin: 20px 0;
-  /*=======  Font size'ı 60px yapın ve text'i ortalayın(center) */
-  font-size: 10px;
+* {
+  color: #3c373b;
 }
 
-h2, h3, h4, h5, h6 {
-  font-family: 'Gaegu', cursive;
+h1 {
+  font-family: "Gaegu", cursive;
+  margin: 20px 0;
+  /*=======  Font size'ı 60px yapın ve text'i ortalayın(center) */
+  font-size: 60px;
+  text-align: center;
+}
+
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Gaegu", cursive;
   margin-bottom: 0;
   padding: 0 10px;
   /*=======  Font size'ı 30px yapın*/
-  font-size: 10px;
+  font-size: 30px;
 }
 
 /*======= Sayfadaki TÜM p tag'leri için aşağıdaki özellikleri içeren bir selector yaratın:
+
 
 font-size: 16px;
 font-family: roboto;
@@ -24,8 +32,12 @@ padding: 10px;
 line-height: 1.4;
 
 */
-
-
+p {
+  font-size: 16px;
+  font-family: roboto;
+  padding: 10px;
+  line-height: 1.4;
+}
 /*======= Sayfadaki TÜM imajlar için aşağıdaki özellikleri içeren bir selector yaratın:
 
   border-radius: 10px;
@@ -38,9 +50,11 @@ line-height: 1.4;
 
 .content-row div {
   /*======= margin propery yaratın.  Değerini 20px olarak atayın*/
+  margin: 20px;
 }
 
 .container {
+  width: 750px;
   /*======= width property yaratın. Değerini 750px olarak atayın */
   margin: 0 auto;
 }
@@ -54,17 +68,23 @@ line-height: 1.4;
   color: white;
   text-decoration: none;
   margin-bottom: 20px;
-   /*======= background property yaratın. Değerini #E79947 olarak atayınız.*/
-  
+  background: #e79947;
+  text-align: center;
+  /*======= background property yaratın. Değerini #E79947 olarak atayınız.*/
 }
 
 .container header nav a:hover {
-/*======= background property yaratın ve değeri white olsun.  Sonra, color property yaratın ve değerini yapın. */
+  background: white;
+
+  /*======= background property yaratın ve değeri white olsun.  Sonra, color property yaratın ve değerini yapın. */
 }
 
 /*======= Hakkmızda bölümü için aşağıdaki stilleri içeren bir selector yaratın:
   margin-top: 20px;
 */
+.hakkimizda-section {
+  margin-top: 20px;
+}
 
 .contact-section {
   border-top: 1px dashed black;
@@ -75,6 +95,9 @@ line-height: 1.4;
   padding: 0;
   margin: 0 0 10px 0;
 }
+.contact-section-adress {
+  line-height: 2;
+}
 
 /*======= contact-section class'da address tag'i için aşağdıaki stilleri içeren bir selector yaratın:
    line-height: 2;
@@ -82,14 +105,14 @@ line-height: 1.4;
 
 footer {
   width: 100%;
-  background: #E79947;
+  background: #e79947;
   border-top: 1px dashed white;
 }
 
-footer .footer-content { 
-  margin: 0 auto; 
+footer .footer-content {
+  margin: 0 auto;
+  width: 750px;
   /*======= width property yaratın. Değerini 750px olarak atayın */
-  
 }
 
 footer .footer-content h3 {
@@ -107,7 +130,6 @@ footer nav {
   text-decoration: underline;
 */
 
-
 footer nav a:first-child {
   margin-left: 0;
 }
@@ -118,5 +140,6 @@ footer nav a:first-child {
 
 footer .footer-content .copyright {
   padding: 20px 0;
-   /*======= metni ortalayacak kodu yazın */
+  text-align: center;
+  /*======= metni ortalayacak kodu yazın */
 }
